<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_headingname"
        android:gravity="center"
        android:fontFamily="cursive"
        android:layout_marginTop="@dimen/login_heading_size"
        android:textSize="@dimen/login_heading_size"
        android:textColor="@color/heading_color"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/input_marginTop"
        android:layout_marginLeft="@dimen/input_marginLeft"
        android:layout_marginRight="@dimen/input_marginRight">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email address"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@+id/emaillayout"
        android:layout_marginLeft="@dimen/input_marginLeft"
        android:layout_marginRight="@dimen/input_marginRight"
        android:layout_marginTop="@dimen/input_gap"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordlayout"
        android:layout_marginLeft="@dimen/btn_marginLeft"
        android:layout_marginRight="@dimen/btn_marginRight"
        android:layout_marginTop="@dimen/btn_gap"
        android:text="@string/loginbtn"
        android:textColor="@color/white"
        android:background="@color/btn_background"/>

    <TextView
        android:id="@+id/registerlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnlogin"
        android:layout_marginTop="@dimen/link_gap"
        android:text="@string/registerlink_text"
        android:gravity="center_horizontal"/>


</RelativeLayout>